# 35_tensorflow_2

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
demo/: tf_sample.cpp
src/: ts_checkmodel.cpp
